# philand

./: .dockerignore  .gitignore  Cargo.toml  DEBUG_GOOGLE_SSO.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json
migrations/: schema.sql
scripts/: dev.sh  prod.sh  setup.sh
src/: lib.rs  main.rs
src/components/card/: basic-card.vue
src/config/: config.rs
src/handler/: auth.rs  budgets.rs  categories.rs  cleanup.rs  comments.rs  entries.rs  google_auth.rs  health.rs  members.rs  mod.rs  notifications.rs  profile.rs  summaries.rs  transfers.rs  users.rs
src/manager/: mod.rs
src/manager/biz/: authz.rs  budgets.rs  categories.rs  comments.rs  entries.rs  google_auth.rs  members.rs  mod.rs  password_reset.rs  profile.rs  transfers.rs  users.rs
src/manager/models/: budget.rs  category.rs  comment.rs  entry.rs  google_auth.rs  member.rs  mod.rs  notification.rs  role.rs  transfer.rs  user.rs
src/manager/repository/: attachments.rs  budgets.rs  categories.rs  comments.rs  entries.rs  members.rs  mod.rs  notifications.rs  transfers.rs  users.rs
src/utils/: cleanup.rs  image_processor.rs  mod.rs  rate_limiter.rs  s3_storage.rs
src/utils/database/: database.rs
src/utils/error/: error.rs
src/utils/tables/: tables.rs
web/: .dockerignore  Dockerfile  i18n.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/components/: providers.tsx
web/lib/: api-with-toast.ts  api.ts  auth.ts  budget-types.ts  comment-api.ts  comment-types.ts  crypto.ts  format.ts  formatMoney.ts  image-utils.ts  permissions.ts  queryClient.ts  roles.ts  theme-provider.tsx  toast.ts  useBudgetPermissions.ts  useBudgetRole.ts  useTranslations.ts  version.ts
web/messages/: en.json  vi.json
(+105 files in other folders)
