[package]
name = "philand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

axum = "0.8.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "macros", "chrono", "uuid", "migrate"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
headers = "0.4"
jsonwebtoken = "9"
time = "0.3"
bcrypt = "0.15"
hyper = "1.7.0"
rand = "0.8"
dashmap = "5.5"
image = "0.24"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
